2006-07-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcecontextengine.c: (set_tag_style): remove
	old style attributes before setting new ones.

2006-07-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/gvim.styles: default style scheme.
	* gtksourceview/gtksourcelanguagesmanager.[ch]: added 
	GtkSourceLanguagesManager:style-schemes-dirs property and
	corresponding api. GtkSourceLanguages now also manages style
	schemes similar to languages.
	* gtksourceview/gtksourcestylescheme.[ch]: added
	GtkSourceStyleScheme:id and :name properties; added
	_gtk_source_style_scheme_new_from_file.
	* gtksourceview/gtksourceview.c: connect to notify::buffer on view
	to update priv->source_buffer pointer; set style scheme in the buffer
	only after we got a GtkSourceBuffer.
	* tests/test-widget.c: use style schemes files in 
	$srcdir/gtksourceview/language-specs and set the non-default one.

2006-07-23  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage-private.h:
	* gtksourceview/gtksourcelanguagesmanager.c:
	new function _gtk_source_languages_manager_get_rng_file to
	avoid hardcoding rng file location. Now the file can be in
	any lang file directory.
	* gtksourceview/gtksourcelanguage-parser-1.c:
	(file_parse): use _gtk_source_languages_manager_get_rng_file
	here.

2006-07-21  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcebuffer.[ch]:
	* gtksourceview/gtksourcecontextengine.c:
	* gtksourceview/gtksourceengine.[ch]:
	* gtksourceview/gtksourcestylescheme.[ch]:
	* gtksourceview/gtksourceview.[ch]:
	Made style scheme a GtkSourceView property. Now style scheme
	controls all the colors, including foreground/background and
	current line, and matching brackets. Added methods needed for
	that.

2006-07-20  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourceundomanager.c:
	(gtk_source_undo_manager_modified_changed_handler): replaced
	g_return_if_fail with plain return and g_message, to prevent it