@@ -1052,10 +1052,10 @@ gtk_source_buffer_set_bracket_match_style (GtkSourceBuffer      *source_buffer,
 	}
 	else
 	{
-		gtk_source_style_unapply (source_buffer->priv->bracket_match_tag);
+		_gtk_source_style_unapply (source_buffer->priv->bracket_match_tag);
 	}
 
-	gtk_source_style_apply (style, source_buffer->priv->bracket_match_tag);
+	_gtk_source_style_apply (style, source_buffer->priv->bracket_match_tag);
 }
 
 /**
